--- a/holidayKeeper/src/main/resources/application.properties
+++ b/holidayKeeper/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=holidayKeeper
+
+# ===============================
+# H2 데이터베이스 설정 (파일 기반)
+# ===============================
+# 애플리케이션 실행 폴더에 holiday-keeper-db.mv.db 파일로 데이터가 저장됩니다.
+spring.datasource.url=jdbc:h2:file:./holiday-keeper-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA/Hibernate 설정
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
