feat(config): application.properties 수정
- 운영 jpa 설정 변경 및 console 설정 추가
- 테스트 db에 대한 설정값 추가

--- a/holidayKeeper/src/main/resources/application.properties
+++ b/holidayKeeper/src/main/resources/application.properties
@@ -10,5 +10,12 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA/Hibernate 설정
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+spring.jpa.database=H2
+
+# ===============================
+# H2 Console 설정
+# ===============================
+spring.h2.console.enabled=true
