--- a/holidayKeeper/src/test/resources/application-test.properties
+++ b/holidayKeeper/src/test/resources/application-test.properties
@@ -1,4 +1,8 @@
 # 테스트 실행 시 스키마를 생성하고, 끝나면 삭제합니다.
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # 실행되는 SQL을 보여줍니다. (디버깅용)
